src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__add_int16.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(\n    is_monotone = (true, true),\n    output_type = i16,\n    is_infix_op = true,\n    sqlname = \"+\",\n    propagates_nulls = true,\n    test = true,\n)]\nfn add_int16<'a>(a: Datum<'a>, b: Datum<'a>) -> Result<Datum<'a>, EvalError> {\n    a.unwrap_int16()\n        .checked_add(b.unwrap_int16())\n        .ok_or(EvalError::NumericFieldOverflow)\n        .map(Datum::from)\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct AddInt16;
impl crate::func::binary::EagerBinaryFunc for AddInt16 {
    type Input<'a> = (Datum<'a>, Datum<'a>);
    type Output<'a> = Result<Datum<'a>, EvalError>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        add_int16(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <i16>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
    fn introduces_nulls(&self) -> bool {
        <i16 as ::mz_repr::OutputDatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for AddInt16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("+")
    }
}
impl crate::func::FuncName for AddInt16 {
    const NAME: &'static str = stringify!(add_int16);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(is_monotone = (true, true), output_type = i16, is_infix_op = true, sqlname = \"+\", propagates_nulls = true, test = true,)] fn add_int16<'a>(a: Datum<'a>, b: Datum<'a>) -> Result<Datum<'a>, EvalError>",
        body_fingerprint: 16347080343494466098u64,
    });
}
fn add_int16<'a>(a: Datum<'a>, b: Datum<'a>) -> Result<Datum<'a>, EvalError> {
    a.unwrap_int16()
        .checked_add(b.unwrap_int16())
        .ok_or(EvalError::NumericFieldOverflow)
        .map(Datum::from)
}
