src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__binary_all_modifiers.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(\n    could_error = true,\n    output_type = i16,\n    is_infix_op = true,\n    is_monotone = (true, true),\n    is_infinity_monotone = false,\n    negate = None,\n    propagates_nulls = true,\n    sqlname = \"binary_all_modifiers\",\n)]\nfn binary_all_modifiers<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a> {\n    a\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct BinaryAllModifiers;
impl crate::func::binary::EagerBinaryFunc for BinaryAllModifiers {
    type Input<'a> = (Datum<'a>, Datum<'a>);
    type Output<'a> = Datum<'a>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        binary_all_modifiers(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <i16>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
    fn could_error(&self) -> bool {
        true
    }
    fn introduces_nulls(&self) -> bool {
        <i16 as ::mz_repr::OutputDatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
    fn is_infinity_monotone(&self) -> bool {
        false
    }
    fn negate(&self) -> Option<crate::BinaryFunc> {
        None
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for BinaryAllModifiers {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("binary_all_modifiers")
    }
}
impl crate::func::FuncName for BinaryAllModifiers {
    const NAME: &'static str = stringify!(binary_all_modifiers);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(could_error = true, output_type = i16, is_infix_op = true, is_monotone = (true, true), is_infinity_monotone = false, negate = None, propagates_nulls = true, sqlname = \"binary_all_modifiers\",)] fn binary_all_modifiers<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a>",
        signature: "fn(Datum<'a>, Datum<'a>) -> Datum<'a>",
        body_fingerprint: 14373755090808246356u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Datum<'static>,
            >(::std::marker::PhantomData))
                .column_type(),
            (&crate::func::registry::ColumnTypeProbe::<
                Datum<'static>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
fn binary_all_modifiers<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a> {
    a
}
