src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__binary_generic_list.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(\n    is_infix_op = true,\n    sqlname = \"||\",\n    propagates_nulls = false,\n    introduces_nulls = false,\n)]\nfn list_list_concat<'a, T>(\n    a: Option<DatumList<'a, T>>,\n    b: Option<DatumList<'a, T>>,\n    temp_storage: &'a RowArena,\n) -> Option<DatumList<'a, T>> {\n    unimplemented!()\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct ListListConcat;
impl crate::func::binary::EagerBinaryFunc for ListListConcat {
    type Input<'a> = (
        Option<DatumList<'a, Datum<'a>>>,
        Option<DatumList<'a, Datum<'a>>>,
    );
    type Output<'a> = Option<DatumList<'a, Datum<'a>>>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        list_list_concat(a, b, temp_storage)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = {
            mz_ore::soft_assert_or_log!(
                < DatumList < '_, Datum < '_ > > as mz_repr::SqlContainerType >
                ::unwrap_element_type(& input_types[0].scalar_type).base_eq(< DatumList <
                '_, Datum < '_ > > as mz_repr::SqlContainerType > ::unwrap_element_type(&
                input_types[1].scalar_type)),
                "auto-derived sqlfunc output type inference found inconsistent \
                     SQL types for generic {} across inputs: {:?} vs {:?}; \
                     this indicates a bug in polymorphic coercion, builtin \
                     declaration, or sqlfunc inference",
                "T", < DatumList < '_, Datum < '_ > > as mz_repr::SqlContainerType >
                ::unwrap_element_type(& input_types[0].scalar_type), < DatumList < '_,
                Datum < '_ > > as mz_repr::SqlContainerType > ::unwrap_element_type(&
                input_types[1].scalar_type),
            );
            <DatumList<
                '_,
                Datum<'_>,
            > as mz_repr::SqlContainerType>::wrap_element_type(
                    <DatumList<
                        '_,
                        Datum<'_>,
                    > as mz_repr::SqlContainerType>::unwrap_element_type(
                            &input_types[0].scalar_type,
                        )
                        .clone(),
                )
                .nullable(true)
        };
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
    fn introduces_nulls(&self) -> bool {
        false
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        false
    }
}
impl std::fmt::Display for ListListConcat {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("||")
    }
}
impl crate::func::FuncName for ListListConcat {
    const NAME: &'static str = stringify!(list_list_concat);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(is_infix_op = true, sqlname = \"||\", propagates_nulls = false, introduces_nulls = false,)] fn list_list_concat<'a, T>(a: Option<DatumList<'a, T>>, b: Option<DatumList<'a, T>>, temp_storage: &'a RowArena,) -> Option<DatumList<'a, T>>",
        signature: "fn(Option<DatumList<'a, T>>, Option<DatumList<'a, T>>) -> Option<DatumList<'a, T>>",
        body_fingerprint: 4726381389472009124u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Option<DatumList<'static, Datum<'static>>>,
            >(::std::marker::PhantomData))
                .column_type(),
            (&crate::func::registry::ColumnTypeProbe::<
                Option<DatumList<'static, Datum<'static>>>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
fn list_list_concat<'a, T>(
    a: Option<DatumList<'a, T>>,
    b: Option<DatumList<'a, T>>,
    temp_storage: &'a RowArena,
) -> Option<DatumList<'a, T>> {
    unimplemented!()
}
