src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__complex_type.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(\n    is_monotone = (true, true),\n    output_type = \"Option<bool>\",\n    is_infix_op = true,\n    sqlname = \"test\",\n    propagates_nulls = true,\n    test = true,\n)]\nfn complex_output_type_fn<'a>(\n    a: Datum<'a>,\n    b: Datum<'a>,\n) -> Result<Datum<'a>, EvalError> {\n    unimplemented!()\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct ComplexOutputTypeFn;
impl crate::func::binary::EagerBinaryFunc for ComplexOutputTypeFn {
    type Input<'a> = (Datum<'a>, Datum<'a>);
    type Output<'a> = Result<Datum<'a>, EvalError>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        complex_output_type_fn(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <Option<bool>>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
    fn introduces_nulls(&self) -> bool {
        <Option<bool> as ::mz_repr::OutputDatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for ComplexOutputTypeFn {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("test")
    }
}
impl crate::func::FuncName for ComplexOutputTypeFn {
    const NAME: &'static str = stringify!(complex_output_type_fn);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(is_monotone = (true, true), output_type = \"Option<bool>\", is_infix_op = true, sqlname = \"test\", propagates_nulls = true, test = true,)] fn complex_output_type_fn<'a>(a: Datum<'a>, b: Datum<'a>,) -> Result<Datum<'a>, EvalError>",
        body_fingerprint: 4726381389472009124u64,
    });
}
fn complex_output_type_fn<'a>(
    a: Datum<'a>,
    b: Datum<'a>,
) -> Result<Datum<'a>, EvalError> {
    unimplemented!()
}
