src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__unary_all_modifiers.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(\n    could_error = true,\n    output_type = i16,\n    inverse = None,\n    is_monotone = true,\n    preserves_uniqueness = true,\n    is_eliminable_cast = false,\n    sqlname = \"unary_all_modifiers\",\n)]\nfn unary_all_modifiers<'a>(a: Datum<'a>) -> Datum<'a> {\n    a\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct UnaryAllModifiers;
impl crate::func::EagerUnaryFunc for UnaryAllModifiers {
    type Input<'a> = Datum<'a>;
    type Output<'a> = Datum<'a>;
    fn call<'a>(
        &self,
        a: Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        unary_all_modifiers(a)
    }
    fn output_sql_type(
        &self,
        input_type: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <i16>::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn could_error(&self) -> bool {
        true
    }
    fn introduces_nulls(&self) -> bool {
        <i16 as ::mz_repr::OutputDatumType<'_, ()>>::nullable()
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        None
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
    fn is_eliminable_cast(&self) -> bool {
        false
    }
}
impl std::fmt::Display for UnaryAllModifiers {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("unary_all_modifiers")
    }
}
impl crate::func::FuncName for UnaryAllModifiers {
    const NAME: &'static str = stringify!(unary_all_modifiers);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(could_error = true, output_type = i16, inverse = None, is_monotone = true, preserves_uniqueness = true, is_eliminable_cast = false, sqlname = \"unary_all_modifiers\",)] fn unary_all_modifiers<'a>(a: Datum<'a>) -> Datum<'a>",
        signature: "fn(Datum<'a>) -> Datum<'a>",
        body_fingerprint: 14373755090808246356u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Datum<'static>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
fn unary_all_modifiers<'a>(a: Datum<'a>) -> Datum<'a> {
    a
}
